# deepin-terminal

./: .gitignore  .packit.yaml  .project  .project.json  CMakeLists.txt  DtkSettingsToolsMacros.cmake  README  README.md  README.zh_CN.md  build_qtermwidget.sh  commonpanel.cpp  commonpanel.h  customcommanddelegate.cpp  customcommanddelegate.h  customcommanditem.cpp  customcommanditem.h  customcommanditemmodel.cpp  customcommanditemmodel.h  customcommandlist.cpp  customcommandlist.h  customcommandoptdlg.cpp  customcommandoptdlg.h  customcommandpanel.cpp  customcommandpanel.h  customcommandplugin.cpp  customcommandplugin.h  customcommandsearchrstpanel.cpp  customcommandsearchrstpanel.h  customcommandtoppanel.cpp  customcommandtoppanel.h  deepin-terminal-ng.pro  deepin-terminal.desktop  deepin-terminal.pro  default-config.json  define.h  environments.h.in  linebar.h  main.cpp  mainwindow.cpp  mainwindow.h  (+74 more)
.reuse/: dep5
FuzzyTest/: CMakeLists.txt
FuzzyTest/include/: FuzzerBuiltins.h  FuzzerBuiltinsMsvc.h  FuzzerCommand.h  FuzzerCorpus.h  FuzzerDataFlowTrace.h  FuzzerDefs.h  FuzzerDictionary.h  FuzzerExtFunctions.h  FuzzerFork.h  FuzzerIO.h  FuzzerInterface.h  FuzzerInternal.h  FuzzerMerge.h  FuzzerMutate.h  FuzzerOptions.h  FuzzerRandom.h  FuzzerSHA1.h  FuzzerTracePC.h  FuzzerUtil.h  FuzzerValueBitMap.h
FuzzyTest/src/: main.cpp
test/: CMakeLists.txt  cmake-lcov-test.sh
test/src/common/: ut_defines.h  ut_settingio_test.cpp  ut_utils_test.cpp  ut_utils_test.h
test/src/customcommand/: ut_customcommandoptdlg_test.cpp  ut_customcommandoptdlg_test.h  ut_customcommandpanel_test.cpp  ut_customcommandpanel_test.h  ut_customcommandplugin_test.cpp  ut_customcommandsearchrstpanel_test.cpp  ut_customcommandsearchrstpanel_test.h  ut_customcommandtoppanel_test.cpp  ut_customcommandtoppanel_test.h
test/src/encodeplugin/: ut_encodelistview_test.cpp  ut_encodepanel_test.h
test/src/main/: test_main.cpp  ut_dbusmanager_test.cpp  ut_dbusmanager_test.h  ut_mainwindow_test.cpp  ut_service_test.cpp  ut_service_test.h  ut_terminalapplication_test.cpp  ut_terminalapplication_test.h  ut_termproperties_test.cpp  ut_termproperties_test.h  ut_windowsmanager_test.cpp  ut_windowsmanager_test.h
test/src/quaketerminal/: ut_termargumentparser_test.cpp
test/src/remotemanage/: ut_remotemanagementpanel_test.cpp  ut_remotemanagementpanel_test.h  ut_remotemanagementplugn_test.cpp  ut_remotemanagementplugn_test.h  ut_remotemanagementsearchpanel_test.cpp  ut_remotemanagementtoppanel_test.cpp  ut_remotemanagementtoppanel_test.h  ut_serverconfiggrouppanel_test.cpp  ut_serverconfigmanager_test.cpp  ut_serverconfigoptdlg_test.cpp  ut_serverconfigoptdlg_test.h
test/src/settings/: ut_newdspinbox_test.cpp  ut_newdspinbox_test.h  ut_settings_test.cpp  ut_settings_test.h  ut_shortcutmanager_test.cpp  ut_shortcutmanager_test.h
test/src/stub/: addr_pri.h
test/src/theme/: ut_themelistview_test.cpp  ut_themelistview_test.h  ut_themepanel_test.cpp  ut_themepanel_test.h
test/src/views/: ut_customthemesettingdialog_test.cpp  ut_customthemesettingdialog_test.h  ut_focusframe_test.cpp  ut_focusframe_test.h  ut_iconbutton_test.cpp  ut_iconbutton_test.h  ut_itemwidget_test.cpp  ut_itemwidget_test.h  ut_listview_test.cpp  ut_listview_test.h  ut_myiconbutton_test.cpp  ut_myiconbutton_test.h  ut_operationconfirmdlg_test.cpp  ut_operationconfirmdlg_test.h  ut_pagesearchbar_test.cpp  ut_pagesearchbar_test.h  ut_tabbar_test.cpp  ut_tabbar_test.h  ut_tabrenamedlg_test.cpp  ut_tabrenamedlg_test.h  ut_tabrenamewidget_test.cpp  ut_tabrenamewidget_test.h  ut_terminputdialog_test.cpp  ut_terminputdialog_test.h  ut_termwidget_test.cpp  ut_termwidget_test.h  ut_termwidgetpage_test.cpp  ut_termwidgetpage_test.h  ut_titlebar_test.cpp  ut_titlebar_test.h  ut_warnningdlg_test.cpp  ut_warnningdlg_test.h
test/termwidget5/: CMakeLists.txt
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/src/: stub.h
tests/src/common/: ut_defines.h  ut_settingio_test.cpp  ut_settingio_test.h  ut_stub_defines.h  ut_utils_test.cpp  ut_utils_test.h
tests/src/customcommand/: ut_customcommandoptdlg_test.cpp  ut_customcommandoptdlg_test.h  ut_customcommandpanel_test.cpp  ut_customcommandpanel_test.h  ut_customcommandplugin_test.cpp  ut_customcommandplugin_test.h  ut_customcommandsearchrstpanel_test.cpp  ut_customcommandsearchrstpanel_test.h  ut_customcommandtoppanel_test.cpp  ut_customcommandtoppanel_test.h
tests/src/encodeplugin/: ut_encodelistview_test.cpp  ut_encodelistview_test.h  ut_encodepanel_test.cpp  ut_encodepanel_test.h
tests/src/main/: main.cpp  ut_dbusmanager_test.cpp  ut_dbusmanager_test.h  ut_mainwindow_test.cpp  ut_mainwindow_test.h  ut_service_test.cpp  ut_service_test.h  ut_terminalapplication_test.cpp  ut_terminalapplication_test.h  ut_termproperties_test.cpp  ut_termproperties_test.h  ut_windowsmanager_test.cpp  ut_windowsmanager_test.h
tests/src/remotemanage/: ut_groupconfigoptdlg_test.cpp  ut_groupconfigoptdlg_test.h  ut_remotemanagementpanel_test.cpp  ut_remotemanagementpanel_test.h  ut_remotemanagementplugn_test.cpp  ut_remotemanagementplugn_test.h  ut_remotemanagementsearchpanel_test.cpp  ut_remotemanagementsearchpanel_test.h  ut_remotemanagementtoppanel_test.cpp  ut_remotemanagementtoppanel_test.h  ut_serverconfiggrouppanel_test.cpp  ut_serverconfiggrouppanel_test.h  ut_serverconfigmanager_test.cpp  ut_serverconfigmanager_test.h  ut_serverconfigoptdlg_test.cpp  ut_serverconfigoptdlg_test.h
tests/src/settings/: ut_newdspinbox_test.cpp  ut_newdspinbox_test.h  ut_settings_test.cpp  ut_settings_test.h  ut_shortcutmanager_test.cpp  ut_shortcutmanager_test.h
tests/src/stub/: addr_pri.h  stub.h
tests/src/theme/: ut_themelistview_test.cpp  ut_themepanel_test.cpp  ut_themepanel_test.h
tests/src/views/: ut_customthemesettingdialog_test.cpp  ut_customthemesettingdialog_test.h  ut_focusframe_test.cpp  ut_focusframe_test.h  ut_iconbutton_test.cpp  ut_iconbutton_test.h  ut_itemwidget_test.cpp  ut_itemwidget_test.h  ut_listview_test.cpp  ut_listview_test.h  ut_pagesearchbar_test.cpp  (+13 more)
unit-test/: CMakeLists.txt
(+601 files in other folders)
